second commit of my angular bank project

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 
-<!-- <h1 class="fs-3 mt-3 ms-3 text-danger">
+<h1 class="fs-3 mt-3 ms-3 text-danger">
     Hi {{data}}
-</h1> -->
+</h1>
 
 <div>
         <div class="text-center row w-100">
@@ -11,19 +11,19 @@
                     <h1 style="color:white ; ">Sign In</h1>
                     
                     <div class="mt-2 p-2">
-                        <input id="u1" name="acno" class="form-control mt-2 p-2" type="text" placeholder="Enter Acno">
+                        <input [(ngModel)]="acno" id="u1" name="acno" class="form-control mt-2 p-2" type="text" [placeholder]="pdata">
                     </div>
 
 
                     <div class="mt-2 p-2">
-                        <input id="p1" name="psw" class="form-control mt-2 p-2" type="password" placeholder="Enter password">
+                        <input [(ngModel)]="psw" id="p1" name="psw" class="form-control mt-2 p-2" type="password" placeholder="Enter password">
                     </div>
 
 
 
-                    <button onclick="login()" type="button" class="btn btn-outline-warning m-2">LogIn</button>
+                    <button (click)="login()" type="button" class="btn btn-outline-warning m-2">LogIn</button>
                     <p style="color: white;">Don't have an account?
-                        <a style="color: white; text-decoration: none;"><strong>Create an
+                        <a style="color: white; text-decoration: none;" routerLink="register"><strong>Create an
                                 account</strong></a>
                     </p>
                 </form>
