--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -26,7 +26,7 @@
                     <input id="cpsw" name="cpsw" class="form-control mt-2 p-2" type="password" placeholder="Confirm Password">
                 </div>
 
-                <button onclick="signup()" type="button" class="btn btn-outline-warning m-2">SignUp</button>
+                <button (click)="signup()" type="button" class="btn btn-outline-warning m-2">SignUp</button>
                 
             </form>
         </div>
