--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,25 +2,36 @@
 <div class="row">
     <div class="box__1 col-3">
         <div class="list-group box__button">
+
             <button type="button" class="list-group-item list-group-item-action active text-center" aria-current="true"
-                data-bs-toggle="modal" data-bs-target="#exampleModal" >
+                data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <i class="fa-solid fa-user pe-3"></i> View Profile
             </button>
+
             <button type="button" class="list-group-item list-group-item-action text-center" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" >
-                <i class="fa-solid fa-sack-dollar pe-3"></i>Balance Enquiry</button>
+                data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                <i class="fa-solid fa-sack-dollar pe-3"></i>Balance Enquiry
+            </button>
+
             <button type="button" class="list-group-item list-group-item-action text-center" data-bs-toggle="modal"
                 data-bs-target="#exampleModal1">
-                <i class="fa-solid fa-money-bill-transfer pe-3"></i>Money Transfer</button>
-            <a href="transaction" type="button" class="list-group-item list-group-item-action text-center">
+                <i class="fa-solid fa-money-bill-transfer pe-3"></i>Money Transfer
+            </button>
+
+            <a href="statement" type="button" class="list-group-item list-group-item-action text-center">
                 <i class="fa-solid fa-receipt pe-3"></i>Account Statement</a>
-            <button type="button" class="list-group-item list-group-item-action text-center" onclick="logout()">
-                <i class="fa-solid fa-right-from-bracket pe-3"></i>Log Out</button>
+
+            <button type="button" class="list-group-item list-group-item-action text-center" (click)="logout()">
+                <i class="fa-solid fa-right-from-bracket pe-3"></i>Log Out
+            </button>
+
             <button type="button" class="list-group-item list-group-item-action text-center">
-                <i class="fa-solid fa-user-minus pe-3"></i> Delete Account</button>
+                <i class="fa-solid fa-user-minus pe-3"></i> Delete Account
+            </button>
   
         </div>
     </div>
+    
     <div class="box__2 col-9 text-center">
         <h3 class="">Hi</h3>
         <h1 class="">Enjoy Net Banking with SBI</h1>
@@ -93,13 +104,13 @@
             <div class="modal-body text-center">
                 <form action="">
                     <h1 class="modal-title" id="exampleModalLabel1">Money Trasnfer</h1>
-                    <input formControlName="acno" type="text" class="border border-primary-subtle mt-3 form-control"
+                    <input type="text" class="border border-primary-subtle mt-3 form-control"
                         placeholder="Reciepient Account Number">
                     
-                    <input formControlName="amount" type="text" class="border border-primary-subtle mt-3 form-control"
+                    <input type="text" class="border border-primary-subtle mt-3 form-control"
                         placeholder="Amount to send">
                     
-                    <input formControlName="passwd" type="text" class="border border-primary-subtle mt-3 form-control"
+                    <input type="text" class="border border-primary-subtle mt-3 form-control"
                         placeholder="Password">
                     
                     <button class="mt-4 btn btn-success w-50">Transfer</button>
